--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "material-design-icons": "^3.0.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
     "@angular-devkit/core": "^0.4.3",
@@ -50,5 +52,7 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  }
+  },
+  "main": "index.js",
+  "author": "Edgar Mejía <edgar1315@gmail.com>"
 }
