--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/core": "^5.0.0",
     "@angular/flex-layout": "^5.0.0-beta.13",
     "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.3",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
@@ -27,14 +26,16 @@
     "@auth0/angular-jwt": "^1.0.0-beta.9",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
     "material-design-icons": "^3.0.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "rxjs": "^5.5.2",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/core": "^0.4.3",
-    "@angular/cli": "1.7.0",
+    "@angular/cli": "^8.1.2",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
