--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.3",
+    "@angular-devkit/build-angular": "^0.803.0",
+    "@angular/animations": "^9.0.0-next.3",
     "@angular/cdk": "^5.2.3",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.0.0",
+    "@angular/common": "^9.0.0-next.3",
+    "@angular/compiler": "^9.0.0-next.3",
+    "@angular/core": "^9.0.0-next.3",
     "@angular/flex-layout": "^5.0.0-beta.13",
-    "@angular/forms": "^5.2.0",
+    "@angular/forms": "^9.0.0-next.3",
     "@angular/material": "^5.2.3",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/platform-browser": "^9.0.0-next.3",
+    "@angular/platform-browser-dynamic": "^9.0.0-next.3",
+    "@angular/router": "^9.0.0-next.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "popper.js": "^1.12.9",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/core": "^0.4.3",
     "@angular/cli": "^8.1.2",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/compiler-cli": "^9.0.0-next.3",
+    "@angular/language-service": "^9.0.0-next.3",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -53,7 +54,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~3.5.3"
   },
   "main": "index.js",
   "author": "Edgar Mejía <edgar1315@gmail.com>"
