--- a/package.json
+++ b/package.json
@@ -18,38 +18,38 @@
     "@angular/common": "^9.0.0-next.3",
     "@angular/compiler": "^9.0.0-next.3",
     "@angular/core": "^9.0.0-next.3",
-    "@angular/flex-layout": "^5.0.0-beta.13",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "^9.0.0-next.3",
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "^9.0.0-next.3",
     "@angular/platform-browser-dynamic": "^9.0.0-next.3",
     "@angular/router": "^9.0.0-next.3",
-    "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "core-js": "^2.4.1",
+    "@auth0/angular-jwt": "^1.2.0",
+    "core-js": "^2.6.9",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.15.0",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.0.0-rc.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.4.3",
-    "@angular/cli": "^8.1.2",
+    "@angular-devkit/core": "^0.4.9",
+    "@angular/cli": "^8.3.0",
     "@angular/compiler-cli": "^9.0.0-next.3",
     "@angular/language-service": "^9.0.0-next.3",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.0.118",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
