--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sidebar",
-  "version": "0.0.0",
+  "name": "Angular-CRUD",
+  "version": "9.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
